All_Component_DX/force-app/main/default/objects/Offline_Object__c/fields/Advanced_Archival_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Archival_Criteria__c</fullName>
    <description>This is the advance criteria for Archival</description>
    <inlineHelpText>This is the advance criteria for Archival</inlineHelpText>
    <label>Advanced Archival Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>