All_Component_DX/force-app/main/default/objects/Offline_Object__c/fields/Advanced_Download_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Download_Criteria__c</fullName>
    <description>This is the advance criteria for data download</description>
    <inlineHelpText>This is the advance criteria for data download</inlineHelpText>
    <label>Advanced Download Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>