All_Component_DX/force-app/main/default/objects/Offline_Object__c/fields/Advanced_Lock_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Lock_Criteria__c</fullName>
    <description>This is the advance criteria for data lock.</description>
    <inlineHelpText>This is the advance criteria for data lock.</inlineHelpText>
    <label>Advanced Lock Criteria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>