All_Component_DX/force-app/main/default/objects/Offline_Object__c/fields/Allow_API_Access__c.field-meta.xml
<CustomField>
    <fullName>Allow_API_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow API Access</label>
    <type>Checkbox</type>
</CustomField>