All_Component_DX/force-app/main/default/objects/Offline_Object__c/fields/Allow_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Allow_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the offline user can see Attachment for  the selected object</description>
    <inlineHelpText>Indicates if the offline user can see Attachment for  the selected object</inlineHelpText>
    <label>Allow Attachment</label>
    <type>Checkbox</type>
</CustomField>