All_Component_DX/force-app/main/default/objects/Offline_Object__c/fields/Allow_Tab__c.field-meta.xml
<CustomField>
    <fullName>Allow_Tab__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the offline user can see this object as a tab</description>
    <inlineHelpText>Indicates if the offline user can see this object as a tab</inlineHelpText>
    <label>Allow Tab In Offline?</label>
    <type>Checkbox</type>
</CustomField>