All_Component_DX/force-app/main/default/objects/Offline_Object__c/fields/Allow_View_Override__c.field-meta.xml
<CustomField>
    <fullName>Allow_View_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the end user can override the default tab view in offline</description>
    <inlineHelpText>If the end user can override the default tab view in offline</inlineHelpText>
    <label>Allow Override of default view?</label>
    <type>Checkbox</type>
</CustomField>