All_Component_DX/force-app/main/default/objects/Offline_Object__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>API Name of the object enabled for offline</description>
    <inlineHelpText>API Name of the object enabled for offline</inlineHelpText>
    <label>Object Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>