All_Component_DX/force-app/main/default/objects/Offline_Object__c/fields/Offline_Query__c.field-meta.xml
<CustomField>
    <fullName>Offline_Query__c</fullName>
    <description>Representation of SOQL query in offline query builder tool</description>
    <inlineHelpText>Representation of SOQL query in offline query builder tool</inlineHelpText>
    <label>Offline Query</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>