All_Component_DX/force-app/main/default/objects/Offline_Object__c/fields/Ownership_Limit__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Limit__c</fullName>
    <description>Indicates the type of restriction to be applied on the data set: All records visible to the owner, all the owner&apos;s records or all the owner&apos;s team&apos;s records</description>
    <inlineHelpText>Indicates the type of restriction to be applied on the data set: All records visible to the owner, all the owner&apos;s records or all the owner&apos;s team&apos;s records</inlineHelpText>
    <label>Ownership Limit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>My Records</fullName>
                <default>true</default>
                <label>My Records</label>
            </value>
            <value>
                <fullName>My Team&apos;s Records</fullName>
            </value>
            <value>
                <fullName>All Records</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>