All_Component_DX/force-app/main/default/objects/Offline_Object__c/fields/Parent_Object__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object__c</fullName>
    <description>For child objects, API name of the parent object</description>
    <inlineHelpText>For child objects, API name of the parent object</inlineHelpText>
    <label>Parent Object</label>
    <length>150</length>
    <type>Text</type>
</CustomField>