All_Component_DX/force-app/main/default/objects/Offline_Object__c/fields/Profile_Key__c.field-meta.xml
<CustomField>
    <fullName>Profile_Key__c</fullName>
    <description>Unique key to identify the relationship between an Offline profile, object name and related object. Calculated automatically</description>
    <formula>IF(Len( Related_To__r.Object_Name__c )&lt;1 ,
   Offline_Profile__r.Profile_Name__c  &amp; &quot;_&quot; &amp;  Object_Name__c ,
   Offline_Profile__r.Profile_Name__c  &amp; &quot;_&quot; &amp;  Object_Name__c &amp; &quot;_&quot;  &amp; Related_To__r.Object_Name__c )</formula>
    <label>Profile Key</label>
    <type>Text</type>
</CustomField>