All_Component_DX/force-app/main/default/objects/Offline_Object__c/fields/Related_To__c.field-meta.xml
<CustomField>
    <fullName>Related_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this object is included in the dataset indirectly as a result of referencing another object, this field indicates the source object</description>
    <inlineHelpText>If this object is included in the dataset indirectly as a result of referencing another object, this field indicates the source object</inlineHelpText>
    <label>Related To</label>
    <referenceTo>Offline_Object__c</referenceTo>
    <relationshipLabel>Related Objects Enabled for Offline</relationshipLabel>
    <relationshipName>Offline_Object</relationshipName>
    <type>Lookup</type>
</CustomField>