All_Component_DX/force-app/main/default/objects/Offline_Object__c/fields/Select__c.field-meta.xml
<CustomField>
    <fullName>Select__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox used in ServiceMax screens to manage record selection</description>
    <inlineHelpText>To select a record for edit or delete on manageDataSet Page</inlineHelpText>
    <label>Select</label>
    <type>Checkbox</type>
</CustomField>