All_Component_DX/force-app/main/default/objects/Offline_Object__c/fields/SOQL_Query__c.field-meta.xml
<CustomField>
    <fullName>SOQL_Query__c</fullName>
    <description>Salesforce SOQL query used to retrieve data from this object</description>
    <inlineHelpText>Salesforce SOQL query used to retrieve data from this object</inlineHelpText>
    <label>SOQL Query</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>