All_Component_DX/force-app/main/default/objects/Offline_Object__c/fields/Use_Object_As_Home_Tab__c.field-meta.xml
<CustomField>
    <fullName>Use_Object_As_Home_Tab__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this object&apos;s tab should be used as the home tab</description>
    <inlineHelpText>Indicates if this object&apos;s tab should be used as the home tab</inlineHelpText>
    <label>Use Object As Home Tab</label>
    <type>Checkbox</type>
</CustomField>