All_Component_DX/force-app/main/default/objects/Offline_Object__c/fields/User_Defined__c.field-meta.xml
<CustomField>
    <fullName>User_Defined__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this object is automatically included due to ServiceMax functionality or explicitly added by the user</description>
    <inlineHelpText>Indicates if this object is automatically included due to ServiceMax functionality or explicitly added by the user</inlineHelpText>
    <label>User Defined?</label>
    <type>Checkbox</type>
</CustomField>